Fix z-index issues with adjacent visible content items

--- a/src/css/gallery-view.less
+++ b/src/css/gallery-view.less
@@ -10,7 +10,7 @@
     perspective: 600px;
 
     .content-active {
-        z-index: 2;
+        z-index: 100;
     }
 
     .content-container { 
